Issue 2: Updated gap

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 16px; /* Space between cards */
+  gap: 17px; 
   width: 100%;
   max-width: 1000px; /* Adjust based on container width */
   margin: auto;
@@ -13,6 +13,7 @@
   max-width: 220px; /* Prevents stretching */
   display: flex;
   justify-content: center;
+  // flex-basis: calc(25% - 17px);
 }
 
 .card {
